--- a/login.css
+++ b/login.css
@@ -57,3 +57,12 @@ a{
     float: right;
     background-color: grey;
 }
+@media only screen and (max-width: 600px) {
+    .login {
+        max-width: 100%;
+    }
+
+    input {
+        width: 100%;
+    }
+}
