--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
     font-weight: 400;
     line-height: 1.7;
     color: #fff;
-    background-color: pink;
+background: #F971DA;
+background: linear-gradient(315deg, #F971DA, #F296C5);;
   }
   img{
     height: 400px;
