--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ background: linear-gradient(315deg, #F971DA, #F296C5);;
     height: 400px;
     width: 252px;   
   }
-  
+  video{
+      height:400px;
+      width:300px;
   .heading-primary {
     color: #fff;
     text-transform: uppercase;
