--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ background: linear-gradient(315deg, #F971DA, #F296C5);;
   video{
       height:400px;
       width:300px;
+  }
   .heading-primary {
     color: #fff;
     text-transform: uppercase;
