--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   }
   
   body {
+      margin: 0;
+      padding: 0;
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7;
