--- a/login.css
+++ b/login.css
@@ -59,6 +59,10 @@ a{
 }
 @media only screen and (max-width: 600px) {
     .login {
+      padding-right: 10px;
+    padding-left: 10px;
+    margin-top:5px;
+  
         max-width: 100%;
     }
 
